# IC_AUTO

./: .env.example  .gitignore  3steps.md  BUG_FIX_LOG.md  CHANGELOG.md  Dockerfile  Dockerfile.admin  PROJECT_STRUCTURE.md  README.md  Task001.md  Task005.md  Task006.md  Task007.md  Task008.md  Task009.md  Task010.md  Task011.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  prd.md  prestart.py  pyproject.toml  start.sh
.github/workflows/: ci-cd.yml
admin_panel/: app.py
app/: main.py
app/api/: debug_onec.py
app/background/: jobs.py
app/core/: config.py  logging.py  migrations_health.py  observability.py
app/db/: base_class.py  session.py
app/integrations/: base_client.py  moysklad_client.py  one_s_client.py  onec_json_normalizer.py
app/models/: log.py  outbox.py  transfer.py
app/schemas/: moy_sklad.py  one_s.py
app/services/: logger_service.py  outbox_processor_service.py  replenishment_service.py
migrations/: env.py
migrations/versions/: 20240911000000_create_integration_logs_table.py  20240911001000_create_pending_transfers_and_outbox_events.py  20240922_create_integration_logs.py  20250922000000_add_observability_fields_to_integration_logs.py  20250922120000_merge_heads_unify_branches.py  20250922150000_add_job_id_to_integration_logs.py  20250923093000_align_integration_logs_types.py  (+3 more)
scripts/: create_integration_logs_table.sql  diagnose_migrations.py  mark_migration_complete.sql  run_migration.py  run_migration_docker.py  test_1c_connection.py  test_admin_panel.py  test_migrations_health.py
tests/: test_onec_normalizer.py
(+5 files in other folders)
